# finmint-cli

./: .gitignore  LEGAL.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
docs/brainstorms/: 2026-03-30-finmint-core-requirements.md  2026-03-31-copilot-money-backend-requirements.md  2026-04-02-copilot-writeback-requirements.md
docs/ideation/: 2026-03-30-finmint-core-ideation.md
docs/plans/: 2026-03-30-001-feat-finmint-core-cli-plan.md  2026-03-31-001-refactor-copilot-money-backend-plan.md
scripts/: generate_screenshots.py
src/finmint/: __init__.py  accounts_tui.py  ai.py  categorize.py  charts.py  cli.py  config.py  copilot.py  db.py  enrollment.py  labels_tui.py  models.py  review_tui.py  rules.py  rules_tui.py  sync.py  teller.py  transfers.py
tests/: conftest.py  test_accounts_tui.py  test_ai.py  test_categorize.py  test_charts.py  test_cli.py  test_config.py  test_copilot.py  test_db.py  test_enrollment.py  test_labels_tui.py  test_review_tui.py  test_rules.py  test_rules_tui.py  test_sync.py  test_teller.py  test_transfers.py  test_view.py
