[project]
name = "finmint"
version = "0.1.0"
description = "Terminal-based personal finance tool with Copilot Money integration and AI categorization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jordan Hilado", email = "jordanalihilado@gmail.com"},
]
keywords = ["finance", "budgeting", "terminal", "cli", "tui", "copilot-money"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "textual>=0.40",
    "httpx>=0.25",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "anthropic>=0.18",
]

[project.urls]
Homepage = "https://github.com/jordanhilado/finmint"
Repository = "https://github.com/jordanhilado/finmint"
Issues = "https://github.com/jordanhilado/finmint/issues"

[project.scripts]
finmint = "finmint.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finmint"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "respx"]
